--- a/Exercicios/ex026/mq002/estilos/style.css
+++ b/Exercicios/ex026/mq002/estilos/style.css
@@ -1,5 +1,23 @@
 @charset "UTF-8";
 
-@charset "UTF-8";
-
 /* Configurações gerais */
+
+*{
+    margin: 0px;
+    padding: 0px;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+html, body{
+    width: 100vw;
+    height: 100vh;
+    background-color: #233eff;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+h1{
+    color: wheat;
+    text-shadow: 3px 3px 0px #162596;
+    padding: 10px;
+}
