--- a/Exercicios/ex026/mq004/estilos/media-query.css
+++ b/Exercicios/ex026/mq004/estilos/media-query.css
@@ -1,1 +1,84 @@
 @charset "UTF-8";
+
+/* Todas as demais mídias */
+
+/* Typical Device Breakpoint
+Pequenas telas: até 600px
+Celular: dee 600px até 768px
+Tablet: até 768px até 992px
+Desktop: 992px até 1200px
+Grandes telas: acima de 1200px
+*/ 
+
+@media print{
+    body{
+        font-family: 'Courier New', Courier, monospace;
+    }
+
+    main{
+        border: 2px solid black;
+    }
+
+    main::after {
+        content: 'Essa impressão fui eu que fiz OKAY?!Muito chique né ksksk';
+        text-decoration: overline;
+        font-size: medium;
+    }
+    main h1{
+        text-shadow: none;
+        color: black;
+    }
+
+
+
+        img#phone{ display: none;}
+        img#iPad{ display: none;}
+        img#printer{ display: block;}
+        img#pc{ display: none;}
+        img#tv{ display: none;}
+
+        
+
+}
+
+@media screen and (min-width: 768px) and (max-width: 992px){
+    body{
+        background-image: url(../imagens/ipad.jpg);
+    }
+
+        img#phone{ display: none;}
+        img#iPad{ display: block;}
+        img#printer{ display: none;}
+        img#pc{ display: none;}
+        img#tv{ display: none;}
+
+ }
+
+@media screen and (min-width: 992px) and (max-width: 1200px){
+
+    body{
+        background-image: url(../imagens/desktop.jpg);
+    }
+
+        img#phone{ display: none;}
+        img#iPad{ display: none;}
+        img#printer{ display: none;}
+        img#pc{ display: block;}
+        img#tv{ display: none;}
+
+ }
+
+
+@media screen and (min-width: 1200px){
+
+    body{
+        background-image: url(../imagens/tv.jpg);
+    }
+
+        img#phone{ display: none;}
+        img#iPad{ display: none;}
+        img#printer{ display: none;}
+        img#pc{ display: none;}
+        img#tv{ display: block;}
+
+}
